src/test/ui/enum/issue-67945-2.stderr
error[E0308]: mismatched types
  --> $DIR/issue-67945-2.rs:4:11
   |
LL | enum Bug<S> {
   |          - this type parameter
LL |     Var = 0: S,
   |           ^ expected type parameter `S`, found integer
   |
   = note: expected type parameter `S`
                        found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/issue-67945-2.rs:4:11
   |
LL | enum Bug<S> {
   |          - this type parameter
LL |     Var = 0: S,
   |           ^^^^ expected `isize`, found type parameter `S`
   |
   = note:        expected type `isize`
           found type parameter `S`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
