src/test/ui/enum/issue-67945-2.rs
#![feature(type_ascription)]

enum Bug<S> {
    Var = 0: S,
    //~^ ERROR: mismatched types
    //~| ERROR: mismatched types
}

fn main() {}
